--- a/css/style.css
+++ b/css/style.css
@@ -8644,13 +8644,14 @@ textarea.form-control-lg {
   position: sticky;
   top: 0;
   z-index: 9;
-  background-color: var(--bs-danger);
+  background-color: red;
   width: 100%; }
 
   .site-nav .logo img {
-    height: auto; /* Keeps the aspect ratio */
-    max-height: 50px; /* Limits the height of the logo */
-    width: auto; /* Keeps the width proportional */
+    margin-top: 0;
+    height: 100%; /* Keeps the aspect ratio */
+    max-height: 20%; /*Limits the height of the logo */
+    width: 10%; /* Keeps the width proportional */
 }
 
 
@@ -8666,17 +8667,18 @@ textarea.form-control-lg {
     .site-nav .site-navigation .site-menu > li {
       display: inline-block; }
       .site-nav .site-navigation .site-menu > li > a {
-        font-size: 14px;
+        font-size: 18px;
         padding: 10px 15px;
         display: inline-block;
         text-decoration: none !important;
-        color: rgba(255, 255, 255, 0.7); }
+        color: black }
         .site-nav .site-navigation .site-menu > li > a:hover {
           color: #fff; }
       .site-nav .site-navigation .site-menu > li.cta-button a {
         padding: 10px 20px;
-        border: 2px solid rgba(255, 255, 255, 0.1);
-        color: #fff;
+        border: 5px solid rgba(255, 255, 255, 0.1);
+        border-color: black;
+        color: black;
         border-radius: 30px; }
         .site-nav .site-navigation .site-menu > li.cta-button a:hover {
           color: #fff !important;
